# minalac

./: LICENSE.txt  README.md
sources/: config.properties  dependency-reduced-pom.xml  pom.xml
sources/minecraft_mapper/: launch_mapping.sh  minutor
sources/minetest_engine/boilerplate/: env_meta.txt  map.sqlite  map_meta.txt  world.mt
sources/minetest_mapper/: AUTHORS  README.rst  colors.txt  minetestmapper
sources/minetest_mapper/source/: .gitignore  .travis.yml  CMakeLists.txt  Image.cpp  Image.h  PixelAttributes.cpp  PixelAttributes.h  PlayerAttributes.cpp  PlayerAttributes.h  README.rst  TileGenerator.cpp  TileGenerator.h  ZlibDecompressor.cpp  ZlibDecompressor.h  autogenerating-colors.txt  cmake_config.h.in  config.h  db-leveldb.cpp  db-leveldb.h  db-postgresql.cpp  db-postgresql.h  db-redis.cpp  db-redis.h  db-sqlite3.cpp  db-sqlite3.h  db.h  mapper.cpp  minetestmapper.6  types.h  util.cpp  util.h
sources/minetest_mapper/source/util/travis/: script.sh
sources/resources/map-mods/hardenedclay/: depends.txt  init.lua
sources/resources/map-mods/hardenedclay/locale/: de.txt  es.txt  template.txt  tr.txt
sources/resources/underground-map/region/: r.-5.5.mca  r.5.-5.mca
sources/src/main/java/: CommandLauncher.java  FullScaleTester.java  LocalTester.java  MinecraftLibTester.java
sources/src/main/java/com/google/protobuf/: DescriptorProtos.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/entity/: AirPortal.java  Bat.java  BlockEntity.java  BreedableMob.java  Chest.java  Chicken.java  CommandStats.java  Cow.java  Creeper.java  Enderman.java  Entity.java  EntityHorse.java  Item.java  ItemFrame.java  Minecart.java  MinecartChest.java  MinecartCommandBlock.java  MinecartFurnace.java  MinecartHopper.java  MinecartTNT.java  Mob.java  MobSpawner.java  MobSpawnerSpawn.java  Pig.java  Player.java  Rabbit.java  Sheep.java  Skeleton.java  Spider.java  Squid.java  StoredItem.java  UUIDTranslator.java  Villager.java  Witch.java  Wolf.java  Zombie.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/math/: Rot2f.java  Vec3d.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/nbt/: ByteArrayTag.java  ByteTag.java  CompoundTag.java  DoubleTag.java  FloatTag.java  IntArrayTag.java  IntTag.java  ListTag.java  LongTag.java  NBT.java  NBTDataInput.java  NBTDataInputStream.java  NBTDataOutput.java  NBTDataOutputStream.java  NBTException.java  ShortTag.java  StringTag.java  package-info.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/nbt/marshal/: NBTCompoundProcessor.java  NBTDefaultTranslator.java  NBTListProcessor.java  NBTMarshal.java  NBTMarshalException.java  NBTPropertyHelper.java  NBTTranslator.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/nbt/marshal/annotations/: NBTCompoundType.java  NBTListItem.java  NBTListType.java  NBTProperty.java
sources/src/main/java/developpeur2000/minecraft/minecraft_rw/world/: Biome.java  Block.java  BlockData.java  BlockPos.java  BlockType.java  Chunk.java  Level.java  MapItem.java  MapItemColor.java  Region.java  Section.java  World.java  WorldException.java  package-info.java
sources/src/main/java/developpeur2000/minecraft/util/: PropertyAnnotationInfo.java
sources/src/main/java/ign/minecraft/: BedrockMap.java  MineGenerator.java  MineMap.java  MinecraftGenerationException.java  MinecraftMap.java  MinetestMap.java  Utilities.java
sources/src/main/java/ign/minecraft/definition/: BlockDefinition.java  BuildingBlockDefinition.java  BuildingCategory.java  BuildingSpecification.java  BuildingWallsSpecification.java  CemetaryBlockDefinition.java  DamBlockDefinition.java  FieldBlockDefinition.java  FieldBlocks.java  GameplayEntity.java  HypsometricBlockDefinition.java  HypsometricBlocks.java  IdentifiedBlockDefinition.java  IdentifiedBlockFactory.java  OverlayIdentifiedBlockDefinition.java  OverlaySimpleBlockDefinition.java  PhotoTreatedBlockDefinition.java  PhotoTreatedIdentifiedBlockDefinition.java  PhotoTreatedSimpleBlockDefinition.java  PhotoTreatments.java  RandomBlockDefinition.java  RandomBlockSpecification.java  RiverBlockDefinition.java  RoadBlockDefinition.java  RoadSurfaceBlockDefinition.java  SeaBlockDefinition.java  SimpleBlockDefinition.java  SimpleBlocks.java  TreeBlockDefinition.java  UndergroundCopyBlockDefinition.java  ValueBlockDefinition.java  VariableHeightBlockDefinition.java  VegetalBlocks.java  VegetalZoneBlockDefinition.java  VerticalBlockDefinition.java  WallBlockDefinition.java  WaterSurfaceBlockDefinition.java
sources/src/main/java/ign/minecraft/importer/: AltiImporter.java  BuildingsImporter.java  CemetariesImporter.java  ColorTreatmentVectorLoader.java  CountryLandImporter.java  DataConnector.java  DataTreatment.java  FieldsImporter.java  GeoFluxLoader.java  GravelBeachImporter.java  HydroLinesImporter.java  HydroSurfacesImporter.java  LinearConstructionsImporter.java  OCSImporter.java  PhotoImporter.java  PolygonReadyVectorLoader.java  RasterLoader.java  RoadSurfacesImporter.java  RoadsImporter.java  SandBeachImporter.java  SeaLimitImporter.java  ShapefileDataConnector.java  SpatialiteDataConnector.java  VectorLoader.java  VegetalZonesImporter.java  WFSDataConnector.java  WMSDataConnector.java
sources/src/main/java/ignfab/bedrock/: MCAFile2LevelDB.java
sources/src/main/java/ignfab/minetest/: BlockMT.java  BlockSender.java  BlockTypeConverter.java  LuaModGenerator.java  MapProto.java
